--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.dievision.sinicum</groupId>
   <artifactId>sinicum-runner</artifactId>
-  <version>0.5.0.pre10</version>
+  <version>0.5.0</version>
   <packaging>jar</packaging>
 
   <name>sinicum-runner</name>
