--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.dievision.sinicum</groupId>
   <artifactId>sinicum-runner</artifactId>
-  <version>0.5.1</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>sinicum-runner</name>
@@ -124,6 +124,32 @@
           </filesets>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.4.3</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
+
+  <distributionManagement>
+    <repository>
+      <id>dievision.nexus</id>
+      <name>Dievision Nexus</name>
+      <url>https://nexus.dievision.de/repository/dievision-test/</url>
+    </repository>
+    <snapshotRepository>
+      <id>dievision.nexus.snapshots</id>
+      <name>Dievision Nexus Snapshots</name>
+      <url>https://nexus.dievision.de/repository/dievision-test-snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
