--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 
   <groupId>com.dievision.sinicum</groupId>
   <artifactId>sinicum-runner</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>sinicum-runner</name>
   <url>http://maven.apache.org</url>
 
   <properties>
-    <tomcatVersion>7.0.72</tomcatVersion>
+    <tomcatVersion>7.0.96</tomcatVersion>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -52,6 +52,7 @@
     <plugins>
       <plugin>
         <artifactId>maven-jar-plugin</artifactId>
+        <version>3.2.0</version>
         <configuration>
           <archive>
             <manifest>
@@ -142,14 +143,14 @@
 
   <distributionManagement>
     <repository>
-      <id>dievision.nexus</id>
-      <name>Dievision Nexus</name>
-      <url>https://nexus.dievision.de/repository/dievision-test/</url>
+      <id>ema-public-releases</id>
+      <name>EMA Maven Release Repository</name>
+      <url>https://nexus.devops-e.de/repository/ema-public-releases/</url>
     </repository>
     <snapshotRepository>
-      <id>dievision.nexus.snapshots</id>
-      <name>Dievision Nexus Snapshots</name>
-      <url>https://nexus.dievision.de/repository/dievision-test-snapshots/</url>
+      <id>ema-public-snapshots</id>
+      <name>EMA Maven Snapshot Repository</name>
+      <url>https://nexus.devops-e.de/repository/ema-public-snapshots/</url>
     </snapshotRepository>
   </distributionManagement>
 </project>
